--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,9 @@
         android:roundIcon="@mipmap/launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".activities.MainActivity" />
+        <activity android:name=".view.activities.MainActivity" />
         <activity
-            android:name=".activities.LoaderActivity"
+            android:name=".view.activities.LoaderActivity"
             android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,12 +23,12 @@
         </activity>
 
         <activity
-            android:name=".activities.DashBoardActivity"
+            android:name=".view.activities.DashBoardActivity"
             android:label="@string/title_activity_dash_board"
             android:noHistory="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
-            android:name=".activities.CalendarActivity"
+            android:name=".view.activities.CalendarActivity"
             android:label="@string/title_activity_calendar"
             android:noHistory="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
